<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginScreenFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLoginAirbus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_background_sync"
        android:src="@drawable/airbus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginBackground" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginAirbus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/et_passive_background_shape"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small_big"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColor="@color/black"
        android:inputType="numberPassword"
        app:layout_constraintTop_toBottomOf="@+id/etEmailField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/et_passive_background_shape"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_semi_medium"
        />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbRememberState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_size_small_small"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordField"
        app:layout_constraintStart_toStartOf="@id/etPasswordField"
        android:layout_marginTop="@dimen/margin_small" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/text_size_small_small"
        android:fontFamily="@font/roboto"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/login_button_shape"
        android:alpha="0.65"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@+id/cbRememberState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_medium"/>





</androidx.constraintlayout.widget.ConstraintLayout>